qisun-poc/ResourceManager/AzureRM.Sql/v0.9.8/AzureRM.Sql.md
---
Module Name: AzureRM.Sql
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link: Please enter FwLink manually
Help Version: Please enter version of help manually (X.X.X.X) format
Locale: en-US
updated_at: 10/19/2016 3:33 AM
ms.date: 10/19/2016
content_git_url: https://github.com/SummerSun/azure-docs-powershell-int/blob/master/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v0.9.8/AzureRM.Sql.md
gitcommit: https://github.com/SummerSun/azure-docs-powershell-int/blob/c0d1e448da01261236e9ece01ca5c2a98effbf31/azureps-cmdlets-docs/ResourceManager/AzureRM.Sql/v0.9.8/AzureRM.Sql.md
ms.topic: conceptual
ms.prod: powershell
ms.service: Azure PowerShell
ms.technology: Azure PowerShell
author: visual-studio-china
keywords: powershell, cmdlet
manager: visual-studio-china
---

# AzureRM.Sql Module
## Description
This topic displays help topics for the Azure SQL Database Cmdlets. 

## AzureRM.Sql Cmdlets
### [Get-AzureSqlCapability](.\Get-AzureSqlCapability.md)
Gets SQL Database capabilities for the current subscription.


### [Get-AzureSqlDatabaseActivity](.\Get-AzureSqlDatabaseActivity.md)
Gets the status of moving elastic databases.


### [Get-AzureSqlDatabaseAuditingPolicy](.\Get-AzureSqlDatabaseAuditingPolicy.md)
Gets the auditing policy of an Azure SQL database.


### [Get-AzureSqlDatabaseDataMaskingPolicy](.\Get-AzureSqlDatabaseDataMaskingPolicy.md)
Gets the data masking policy for an Azure SQL database.


### [Get-AzureSqlDatabaseDataMaskingRule](.\Get-AzureSqlDatabaseDataMaskingRule.md)
Gets the data masking rules from an Azure SQL database.


### [Get-AzureSqlDatabaseExpanded](.\Get-AzureSqlDatabaseExpanded.md)



### [Get-AzureSqlDatabaseIndexRecommendations](.\Get-AzureSqlDatabaseIndexRecommendations.md)
Gets the recommended index operations for a server or database.


### [Get-AzureSqlDatabaseRestorePoints](.\Get-AzureSqlDatabaseRestorePoints.md)



### [Get-AzureSqlDatabaseSecureConnectionPolicy](.\Get-AzureSqlDatabaseSecureConnectionPolicy.md)
Gets the secure connection policy of an Azure SQL database.


### [Get-AzureSqlDatabaseTransparentDataEncryptionActivity](.\Get-AzureSqlDatabaseTransparentDataEncryptionActivity.md)
Gets the progress of a TDE scan of an Azure SQL database.


### [Get-AzureSqlDatabaseTransparentDataEncryption](.\Get-AzureSqlDatabaseTransparentDataEncryption.md)
Gets the TPE state for an Azure SQL database.


### [Get-AzureSqlDatabaseUpgradeHint](.\Get-AzureSqlDatabaseUpgradeHint.md)
Gets pricing tier hints for a database for upgrading SQL Database.


### [Get-AzureSqlDatabase](.\Get-AzureSqlDatabase.md)
Gets one or more Azure SQL databases.


### [Get-AzureSqlElasticPoolActivity](.\Get-AzureSqlElasticPoolActivity.md)
Gets the status of operations on an elastic pool.


### [Get-AzureSqlElasticPoolDatabase](.\Get-AzureSqlElasticPoolDatabase.md)
Gets elastic databases in an elastic pool and their property values.


### [Get-AzureSqlElasticPoolRecommendation](.\Get-AzureSqlElasticPoolRecommendation.md)
Gets elastic pool recommendations.


### [Get-AzureSqlElasticPool](.\Get-AzureSqlElasticPool.md)
Gets elastic pools and their property values in an Azure SQL Database.


### [Get-AzureSqlServerActiveDirectoryAdministrator](.\Get-AzureSqlServerActiveDirectoryAdministrator.md)
Gets information about an Azure AD administrator for SQL Server.


### [Get-AzureSqlServerAuditingPolicy](.\Get-AzureSqlServerAuditingPolicy.md)
Gets the auditing policy of an Azure SQL server.


### [Get-AzureSqlServerFirewallRule](.\Get-AzureSqlServerFirewallRule.md)
Gets firewall rules for an Azure SQL Database server.


### [Get-AzureSqlServerServiceObjective](.\Get-AzureSqlServerServiceObjective.md)
Gets service objectives for an Azure SQL Database server.


### [Get-AzureSqlServerUpgradeHint](.\Get-AzureSqlServerUpgradeHint.md)
Gets pricing tier hints for upgrading a SQL Database server.


### [Get-AzureSqlServerUpgrade](.\Get-AzureSqlServerUpgrade.md)
Gets the status of an Azure SQL Database server upgrade.


### [Get-AzureSqlServer](.\Get-AzureSqlServer.md)
Returns information about Azure SQL Database servers.


### [New-AzureSqlDatabaseDataMaskingRule](.\New-AzureSqlDatabaseDataMaskingRule.md)
Creates a data masking rule for an Azure SQL database.


### [New-AzureSqlDatabase](.\New-AzureSqlDatabase.md)
Creates an Azure SQL database or an elastic database.


### [New-AzureSqlElasticPool](.\New-AzureSqlElasticPool.md)
Creates an elastic database pool in Azure SQL Database.


### [New-AzureSqlServerFirewallRule](.\New-AzureSqlServerFirewallRule.md)
Creates a firewall rule for an Azure SQL Database server.


### [New-AzureSqlServer](.\New-AzureSqlServer.md)
Creates an Azure SQL Database server.


### [Remove-AzureSqlDatabaseAuditing](.\Remove-AzureSqlDatabaseAuditing.md)
Removes auditing of an Azure SQL database.


### [Remove-AzureSqlDatabaseDataMaskingRule](.\Remove-AzureSqlDatabaseDataMaskingRule.md)
Removes a data masking rule from an Azure SQL database.


### [Remove-AzureSqlDatabase](.\Remove-AzureSqlDatabase.md)
Removes an Azure SQL database.


### [Remove-AzureSqlElasticPool](.\Remove-AzureSqlElasticPool.md)
Deletes an elastic database pool.


### [Remove-AzureSqlServerActiveDirectoryAdministrator](.\Remove-AzureSqlServerActiveDirectoryAdministrator.md)
Removes an Azure AD administrator for SQL Server.


### [Remove-AzureSqlServerAuditing](.\Remove-AzureSqlServerAuditing.md)
Removes auditing of an Azure SQL server.


### [Remove-AzureSqlServerFirewallRule](.\Remove-AzureSqlServerFirewallRule.md)
Deletes a firewall rule from an Azure SQL Database server.


### [Remove-AzureSqlServer](.\Remove-AzureSqlServer.md)
Removes an Azure SQL Database server.


### [Resume-AzureSqlDatabase](.\Resume-AzureSqlDatabase.md)
Resumes an Azure SQL database.


### [Set-AzureSqlDatabaseAuditingPolicy](.\Set-AzureSqlDatabaseAuditingPolicy.md)
Sets the auditing policy for an Azure SQL database.


### [Set-AzureSqlDatabaseDataMaskingPolicy](.\Set-AzureSqlDatabaseDataMaskingPolicy.md)
Sets data masking for an Azure SQL database.


### [Set-AzureSqlDatabaseDataMaskingRule](.\Set-AzureSqlDatabaseDataMaskingRule.md)
Sets the properties of a data masking rule in an Azure SQL database.


### [Set-AzureSqlDatabaseTransparentDataEncryption](.\Set-AzureSqlDatabaseTransparentDataEncryption.md)
Modifies TPE for an Azure SQL database.


### [Set-AzureSqlDatabase](.\Set-AzureSqlDatabase.md)
Sets properties for an Azure SQL database, or moves an existing database into an elastic pool.


### [Set-AzureSqlElasticPool](.\Set-AzureSqlElasticPool.md)
Modifies properties for an elastic database pool in Azure SQL Database.


### [Set-AzureSqlServerActiveDirectoryAdministrator](.\Set-AzureSqlServerActiveDirectoryAdministrator.md)
Provisions an Azure AD administrator for SQL Server.


### [Set-AzureSqlServerAuditingPolicy](.\Set-AzureSqlServerAuditingPolicy.md)
Changes the auditing policy of an Azure SQL server.


### [Set-AzureSqlServerFirewallRule](.\Set-AzureSqlServerFirewallRule.md)
Modifies a firewall rule in Azure SQL Database server.


### [Set-AzureSqlServer](.\Set-AzureSqlServer.md)
Modifies properties of an Azure SQL Database server.


### [Start-AzureSqlDatabaseExecuteIndexRecommendation](.\Start-AzureSqlDatabaseExecuteIndexRecommendation.md)
Starts the workflow that runs a recommended index operation.


### [Start-AzureSqlServerUpgrade](.\Start-AzureSqlServerUpgrade.md)
Starts the upgrade of an Azure SQL Database server.


### [Stop-AzureSqlDatabaseExecuteIndexRecommendation](.\Stop-AzureSqlDatabaseExecuteIndexRecommendation.md)
Stops the workflow that runs a recommended index operation.


### [Stop-AzureSqlServerUpgrade](.\Stop-AzureSqlServerUpgrade.md)
Stops the upgrade of an Azure SQL Database server.


### [Suspend-AzureSqlDatabase](.\Suspend-AzureSqlDatabase.md)
Suspends an Azure SQL database.


### [Use-AzureSqlServerAuditingPolicy](.\Use-AzureSqlServerAuditingPolicy.md)
Specifies that a database uses the auditing policy of its hosting server.



